//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Event {
  id String [pk]
  title String [not null]
  description String [not null]
  dateStart DateTime [not null]
  timeStart DateTime [not null]
  timeEnd DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
}

Table Post {
  id String [pk]
  title String [not null]
  description String [not null]
  company String [not null]
  location String [not null]
  type PostType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  comments Comment [not null]
  user User [not null]
  userId String [not null]
}

Table Comment {
  id String [pk]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  post Post
  postId String
}

Table Section {
  id String [pk]
  name String [not null]
  year Int [not null]
  members User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  department Department
  departmentId String
}

Table Department {
  id String [pk]
  name String [not null]
  sections Section [not null]
  users User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Profile {
  id String [pk]
  studentNumber String
  yearEnrolled DateTime
  yearGraduated DateTime
  alternative_email String
  firstname String
  lastname String
  middlename String
  age Int
  religion String
  gender Gender
  placeOfBirth String
  dateOfBirth String
  homeNo String
  street String
  barangay String
  city String
  corUrl String
  province String
  contactNo String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [unique, not null]
}

Table User {
  id String [pk]
  name String
  username String [not null]
  email String [unique]
  emailVerified DateTime
  image String
  archive Boolean [not null, default: false]
  hashedPassword String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role Role [not null]
  accounts Account [not null]
  sessions Session [not null]
  profile Profile
  events Event [not null]
  comment Comment [not null]
  section Section
  sectionId String
  department Department
  departmentId String
  Post Post [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Enum Role {
  ADMIN
  FACULTY_MEMBER
  FACULTY_ADVISER
  FACULTY_COORDINATOR
  FACULTY_AlUMNI
  FACULTY_STUDENT
  PESO
  BULSU_PARTNER
}

Enum Gender {
  MALE
  FEMALE
}

Enum PostType {
  ANNOUNCEMENT
  JOBS
  FEED
}

Ref: Event.userId > User.id

Ref: Post.userId > User.id

Ref: Comment.userId > User.id

Ref: Comment.postId > Post.id

Ref: Section.departmentId > Department.id

Ref: Profile.userId - User.id [delete: Cascade]

Ref: User.sectionId > Section.id

Ref: User.departmentId > Department.id

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]